objects/Clearance_List__c.object
<CustomObject>
    <fields>
        <fullName>AA_HH__c</fullName>
        <label>AA HH%</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Program</label>
        <referenceTo>Programs__c</referenceTo>
        <relationshipLabel>Clearance Lists</relationshipLabel>
        <relationshipName>Clearance_Lists</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Season__c</fullName>
        <label>Season</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2009 - 2010</fullName>
                </value>
                <value>
                    <fullName>2010 - 2011</fullName>
                </value>
                <value>
                    <fullName>2011 - 2012</fullName>
                </value>
                <value>
                    <fullName>2012 - 2013</fullName>
                </value>
                <value>
                    <fullName>2013 - 2014</fullName>
                </value>
                <value>
                    <fullName>2014 - 2015</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>US_HH__c</fullName>
        <label>US HH%</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Clearance List</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Season__c</columns>
        <columns>US_HH__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CL-{000000}</displayFormat>
        <label>Clearance List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clearance Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>